# cortex-research-suite

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LEGAL_NOTES.md  OVERNIGHT_USAGE.md  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt  requirements.txt  ruff.toml
.github/: CODEOWNERS  FUNDING.yml
.github/scripts/: setup-branch-protection.sh
.github/workflows/: docs.yml  eval.yml  eval_regression.yml  release.yml  security.yml
benchmarks/baselines/: forum-intelligence.json  intelligence-query.json  mindspider-connector.json  multimodal-analyst.json  scenario-simulator.json
cortex/: __init__.py  experiments.py
cortex/agents/: __init__.py  base_agent.py  debate.py  orchestrator.py  research_engine.py  task_graph.py
cortex/config/: __init__.py  settings.py  settings.yaml
cortex/evaluation/: __init__.py  benchmarks.py  judge.py  regression.py  runner.py
cortex/models/: __init__.py  claude_provider.py  provider.py  router.py
cortex/pipelines/: __init__.py  dataset_pipeline.py  skill_runner.py
cortex/skills/: __init__.py
cortex/skills/research_skill/: prompt.md  schema.json
cortex/synthetic/: __init__.py  adversarial_generator.py  base_generator.py  domain_generator.py  reasoning_generator.py  research_generator.py  shard_manager.py  strategy_generator.py  validator.py
cortex/telemetry/: __init__.py  logger.py  metrics.py
cortex/utils/: __init__.py  io.py  security.py
cross-platform/: AGENTS.md  a2a-agent-card.json  pipeline.py
cross-platform/adapters/: universal_adapter.py
cross-platform/manifests/: _index.json  agent-orchestrator.json  agent-output-validator.json  code-review-engine.json  context-engineer.json  de-slop.json  design-system-forge.json  dev-lifecycle-engine.json  diff-generator.json  github-mcp.json  meta-skill-evolver.json  mlops-standards.json  pre-package-pipeline.json  prompt-architect.json  repo-publisher.json  research-workflow.json  security-audit.json  session-memory.json  skill-manifest.schema.json  skill-test-harness.json  tdd-enforcer.json
cross-platform/tools/: generate_all_manifests.py  skill_to_manifest.py
dashboards/: benchmark_dashboard.html  evolution_dashboard.html  petri-dish.html  skill_arena_demo.html
datasets/generators/: skill_dataset_generator.py
datasets/mindspider/: DATA_NOTICE.md
datasets/synthetic/agent-orchestrator/: shard_000.json
datasets/synthetic/agent-output-validator/: shard_000.json
datasets/synthetic/code-review-engine/: shard_000.json
datasets/synthetic/context-engineer/: shard_000.json
datasets/synthetic/de-slop/: shard_000.json
datasets/synthetic/diff-generator/: shard_000.json
demo_run_20260317_202601/json/: genome.json
docs/: ENTERPRISE-SETUP-RUNBOOK.md  PUBLISH_REPORT.md  SKILL_REGISTRY.md  _config.yml  generate_skill_pages.py  index.html
docs/launch/: demo_script.md  devto_article.md  discord_post.md  linkedin_india.md  reddit_post.md  show_hn_post.md  x_thread.md
docs/skills/: _index_fragment.html  agent-orchestrator.html  agent-output-validator.html  code-review-engine.html  context-engineer.html  de-slop.html  design-system-forge.html  dev-lifecycle-engine.html  diff-generator.html  forum-intelligence.html  github-mcp.html  intelligence-query.html  meta-skill-evolver.html  mindspider-connector.html  mlops-standards.html  multimodal-analyst.html  persistent-memory.html  pre-package-pipeline.html  prompt-architect.html  repo-publisher.html  research-workflow.html  scenario-simulator.html  security-audit.html  session-memory.html  skill-test-harness.html  skill-validator.html  tdd-enforcer.html
experiments/: tracker.py
experiments/debates/: intelligence_report_fa2b9cf88bdff4e6_20260316_110748.json
experiments/sample_research_run/: evidence.jsonl  pipeline_metadata.json  report.md  research_report.json
knowledge/: __init__.py  indexer.py  retriever.py  store.py
scripts/: generate_arena_snapshot.py  generate_dataset.py  run_benchmark.py  run_research.py  smoke_test.py
scripts/awesome_list_prs/: awesome-ai-agents.md  awesome-claude-code.md  awesome-llm-eval.md  awesome-mcp.md  awesome-mlops.md  awesome-python.md
skill-organism/: ARCHITECTURE.md  ARENA_SCHEMA.json  CONTRIBUTING.md  LAUNCH_CONTENT.md  LICENSE  MANIFEST.in  README.md  arena_config.py  enterprise_runner.py  evolution_cycle.py  evolution_log.jsonl  example_usage.py  organism.py  pyproject.toml  requirements.txt  skill_dna.py  skill_registry.json  telemetry.py  validate_organism.py
skill-organism/.github/: PULL_REQUEST_TEMPLATE.md
skill-organism/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
skill-organism/.session_memory/: fa2b9cf88bdff4e6_critic.json  fa2b9cf88bdff4e6_researcher.json  fa2b9cf88bdff4e6_strategist.json  fa2b9cf88bdff4e6_synthesizer.json
skill-organism/cortex_skill_organism/: __init__.py  organism.py
skills/agent-orchestrator/: SKILL.md
skills/agent-output-validator/: SKILL.md
skills/code-review-engine/: SKILL.md
skills/context-engineer/: SKILL.md
skills/de-slop/: SKILL.md
skills/design-system-forge/: SKILL.md
skills/dev-lifecycle-engine/: SKILL.md
skills/diff-generator/: SKILL.md
skills/forum-intelligence/: ARENA.md  SKILL.md
skills/github-mcp/: SKILL.md
skills/intelligence-query/: ARENA.md  SKILL.md
skills/meta-skill-evolver/: SKILL.md
skills/mindspider-connector/: ARENA.md  SKILL.md
skills/mlops-standards/: SKILL.md
skills/multimodal-analyst/: ARENA.md  SKILL.md
skills/persistent-memory/: SKILL.md
skills/prompt-architect/: SKILL.md
skills/repo-publisher/: SKILL.md
skills/research-workflow/: SKILL.md
skills/security-audit/: SKILL.md
skills/session-memory/: SKILL.md
skills/skill-test-harness/: SKILL.md
skills/skill-validator/: SKILL.md
skills/tdd-enforcer/: SKILL.md
tests/integration/: test_pipeline.py
tests/unit/: test_agents.py  test_arena_config.py  test_config.py  test_connector.py  test_evaluation.py  test_experiments.py  test_io.py  test_knowledge_store.py  test_metrics.py  test_organism.py  test_router.py  test_security.py  test_shard_manager.py  test_skill_dna.py  test_synthetic.py
(+70 files in other folders)
