[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cortex-research-suite"
version = "1.0.0"
description = "AI Research Operating System — skill testing, synthetic data, evaluation, multi-agent orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TECHKNOWMAD-LABS"},
]
keywords = [
    "claude-code",
    "mcp",
    "langchain",
    "crewai",
    "ai-agents",
    "mlops",
    "autonomous-agents",
    "synthetic-data",
    "evaluation",
    "multi-agent",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/TECHKNOWMAD-LABS/cortex-research-suite"
Repository = "https://github.com/TECHKNOWMAD-LABS/cortex-research-suite"
Documentation = "https://techknowmad-labs.github.io/cortex-research-suite"
Issues = "https://github.com/TECHKNOWMAD-LABS/cortex-research-suite/issues"
Changelog = "https://github.com/TECHKNOWMAD-LABS/cortex-research-suite/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = ["anthropic>=0.40.0"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4.0",
    "pyyaml>=6.0",
]
all = ["cortex-research-suite[api,yaml,dev]"]

[project.scripts]
cortex-generate = "scripts.generate_dataset:main"
cortex-benchmark = "scripts.run_benchmark:main"
cortex-research = "scripts.run_research:main"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.setuptools.package-data]
"*" = ["ARENA.md", "SKILL.md", "*.yaml", "*.json", "*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "S101",    # assert in tests is fine
    "S603",    # subprocess with shell=False is intentional
    "S607",    # partial path for subprocess is fine
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.coverage.run]
source = ["cortex"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
