[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-skill-organism"
version = "1.0.0"
description = "Evolutionary intelligence for AI skill ecosystems — autonomous lifecycle management with genetic algorithms"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TechKnowmad AI", email = "admin@techknowmad.ai"}
]
keywords = ["ai", "ml", "evolution", "genetic-algorithms", "skill-management", "autonomous-systems"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
cortex-evolve = "cortex_skill_organism.evolution_cycle:main"

[project.urls]
Homepage = "https://github.com/TECHKNOWMAD-LABS/cortex"
Repository = "https://github.com/TECHKNOWMAD-LABS/cortex.git"
Documentation = "https://github.com/TECHKNOWMAD-LABS/cortex#readme"
Issues = "https://github.com/TECHKNOWMAD-LABS/cortex/issues"

[tool.setuptools]
packages = ["cortex_skill_organism"]

[tool.setuptools.package-data]
cortex_skill_organism = ["skill_registry.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=cortex_skill_organism"